Fixed header spacing and removed outline from the button

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,7 +31,7 @@ svg {
 }
 
 header {
-	padding: 1em;
+	padding: 1em 1em .8em;
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-start;
@@ -183,6 +183,7 @@ button {
 	padding: 6em 0 12em;
 	border: none;
 	background: none;
+	outline: none;
 }
 
 #button-top svg {
